# NightOwls-PE-Hackathon-2026

./: .coverage  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  USER_MANUAL.md  autoscaler.py  docker-compose.yml  entrypoint.sh  load_test.js  load_test_extreme.js  load_test_gold.js  load_test_silver.js  pyproject.toml  run.py  runbook.md  seed.py
.github/workflows/: ci.yml
Scalability/: Dockerfile  docker-compose.yml  load_test_lb.js  nginx.conf  report.md
app/: __init__.py  database.py
app/models/: event.py
app/routes/: __init__.py  events.py  frontend.py  metrics.py  urls.py  users.py
app/templates/: index.html
data/: events.csv  urls.csv  users.csv
docs/: api.md  architecture.md  capacity-plan.md  config.md  decision-log.md  deploy.md  runbooks.md  scalability-demo-script.md  troubleshooting.md
error-handling/: README.md  failure-modes.md  status-codes.md  validation-rules.md
incident-response/: incident-response-bronze.md  incident-response-gold.md  incident-response-silver.md
monitoring/alertmanager/: alertmanager.yml  docker-entrypoint.sh
monitoring/grafana/provisioning/dashboards/: all-container-logs.json  app-overview.json  logs-overview.json
monitoring/prometheus/: alert_rules.yml  prometheus.yml
monitoring/promtail/: promtail-config.yml
nginx/: nginx.conf
reports/: bottleneck-analysis.md  incident-response-gold.md  incident-response-silver.md
tests/: conftest.py  test_app.py  test_integration.py  test_routes_events.py  test_routes_urls.py  test_routes_users.py  test_utils.py
(+1 files in other folders)
